fix some spacing on smaller screens and skip created column in web as its set on insert and never changed after that

--- a/web/nwrsc/static/scss/common.scss
+++ b/web/nwrsc/static/scss/common.scss
@@ -105,7 +105,7 @@ input::-webkit-inner-spin-button {
         label {
             text-align: left;
             margin-left: 0px;
-            margin-bottom: -5px;
+            margin-top: 5px;
             padding-left: 0.1rem !important;
         }
     }
